tiny cosmetic fix

--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -284,7 +284,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardHeight"
-            app:layout_constraintBottom_toBottomOf="@id/map"
+            app:layout_constraintBottom_toTopOf="@id/delete_session_button"
             tools:listitem="@layout/exercise_item"/>
 
         <androidx.fragment.app.FragmentContainerView
@@ -305,27 +305,27 @@
         <!--tools:layout layout kun synlig her i layot editor-->
 
         <Button
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/delete_session_button"
             android:layout_width="140dp"
             android:layout_height="55dp"
             android:layout_marginTop="@dimen/side_margin"
             android:text="@string/delete"
             app:icon="@drawable/delete_bin_img"
-            app:layout_constraintTop_toBottomOf="@id/map"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/replay_session_button"/>
 
 
         <Button
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/replay_session_button"
             android:layout_width="140dp"
             android:layout_height="55dp"
             android:text="@string/replay_Session"
             android:layout_marginTop="@dimen/side_margin"
             app:icon="@drawable/replay_img"
-            app:layout_constraintTop_toBottomOf="@id/map"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/delete_session_button"
             app:layout_constraintEnd_toEndOf="parent"/>
 
