--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -274,11 +274,12 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/exerciseRecycler"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+
             android:clipToPadding="false"
             android:layout_marginTop="@dimen/side_margin"
+            android:visibility="gone"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
